[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/StartMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/menu.png" type="Texture" id=2]
[ext_resource path="res://assets/PixelForce.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 18
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color( 0.345098, 0.427451, 0.470588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="VBoxContainer" parent="Content"]
margin_left = 630.0
margin_top = 352.0
margin_right = 970.0
margin_bottom = 548.0
custom_constants/separation = 20

[node name="PlayerName" type="LineEdit" parent="Content/List"]
margin_right = 340.0
margin_bottom = 34.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 1 )
max_length = 15
placeholder_text = "Player Name"
caret_blink = true
caret_blink_speed = 0.5

[node name="StartLobby" type="Button" parent="Content/List"]
margin_top = 54.0
margin_right = 340.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( 69, 15 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0.34902, 0.34902, 0.34902, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
disabled = true
text = "Start Lobby"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinLobbyContainer" type="HBoxContainer" parent="Content/List"]
margin_top = 104.0
margin_right = 340.0
margin_bottom = 138.0
custom_constants/separation = 20
alignment = 1

[node name="JoinLobby" type="Button" parent="Content/List/JoinLobbyContainer"]
margin_right = 120.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0.34902, 0.34902, 0.34902, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
disabled = true
text = "Join Lobby"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hostname" type="LineEdit" parent="Content/List/JoinLobbyContainer"]
margin_left = 140.0
margin_right = 340.0
margin_bottom = 34.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 1 )
text = "127.0.0.1"
placeholder_text = "Host Name"
caret_blink = true
caret_blink_speed = 0.5

[node name="Additional" type="HBoxContainer" parent="Content/List"]
margin_top = 158.0
margin_right = 340.0
margin_bottom = 196.0

[node name="Options" type="Button" parent="Content/List/Additional"]
margin_right = 44.0
margin_bottom = 38.0
icon = ExtResource( 2 )
[connection signal="text_changed" from="Content/List/PlayerName" to="." method="_on_PlayerName_text_changed"]
[connection signal="pressed" from="Content/List/StartLobby" to="." method="_on_StartLobby_pressed"]
[connection signal="pressed" from="Content/List/JoinLobbyContainer/JoinLobby" to="." method="_on_JoinLobby_pressed"]
[connection signal="pressed" from="Content/List/Additional/Options" to="." method="_on_Options_pressed"]
